create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2575,48 +2575,48 @@ body {
     -webkit-justify-content: center;
   }
 }
-.cid-qHJMV2MslE .navbar {
+.cid-qI7z3m0ck0 .navbar {
   background: #ffffff;
   transition: none;
   min-height: 77px;
   padding: .5rem 0;
 }
-.cid-qHJMV2MslE .navbar-dropdown.bg-color.transparent.opened {
+.cid-qI7z3m0ck0 .navbar-dropdown.bg-color.transparent.opened {
   background: #ffffff;
 }
-.cid-qHJMV2MslE a {
+.cid-qI7z3m0ck0 a {
   font-style: normal;
 }
-.cid-qHJMV2MslE .nav-item span {
+.cid-qI7z3m0ck0 .nav-item span {
   padding-right: 0.4em;
   line-height: 0.5em;
   vertical-align: text-bottom;
   position: relative;
   text-decoration: none;
 }
-.cid-qHJMV2MslE .nav-item a {
+.cid-qI7z3m0ck0 .nav-item a {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0.7rem 0 !important;
   margin: 0rem .65rem !important;
 }
-.cid-qHJMV2MslE .nav-item:focus,
-.cid-qHJMV2MslE .nav-link:focus {
+.cid-qI7z3m0ck0 .nav-item:focus,
+.cid-qI7z3m0ck0 .nav-link:focus {
   outline: none;
 }
-.cid-qHJMV2MslE .btn {
+.cid-qI7z3m0ck0 .btn {
   padding: 0.4rem 1.5rem;
   display: inline-flex;
   align-items: center;
 }
-.cid-qHJMV2MslE .btn .mbr-iconfont {
+.cid-qI7z3m0ck0 .btn .mbr-iconfont {
   font-size: 1.6rem;
 }
-.cid-qHJMV2MslE .menu-logo {
+.cid-qI7z3m0ck0 .menu-logo {
   margin-right: auto;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand {
   display: flex;
   margin-left: 5rem;
   padding: 0;
@@ -2624,7 +2624,7 @@ body {
   min-height: 3.8rem;
   align-items: center;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand .navbar-caption-wrap {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand .navbar-caption-wrap {
   display: flex;
   -webkit-align-items: center;
   align-items: center;
@@ -2632,40 +2632,40 @@ body {
   min-width: 7rem;
   margin: .3rem 0;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
   line-height: 1.2rem !important;
   padding-right: 2rem;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand .navbar-logo {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand .navbar-logo {
   font-size: 4rem;
   transition: font-size 0.25s;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand .navbar-logo img {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand .navbar-logo img {
   display: flex;
 }
-.cid-qHJMV2MslE .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+.cid-qI7z3m0ck0 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
   transition: font-size 0.25s;
 }
-.cid-qHJMV2MslE .navbar-toggleable-sm .navbar-collapse {
+.cid-qI7z3m0ck0 .navbar-toggleable-sm .navbar-collapse {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
   padding-right: 5rem;
   width: auto;
 }
-.cid-qHJMV2MslE .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+.cid-qI7z3m0ck0 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
   flex-wrap: wrap;
   -webkit-flex-wrap: wrap;
   padding-left: 0;
 }
-.cid-qHJMV2MslE .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+.cid-qI7z3m0ck0 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
   -webkit-align-self: center;
   align-self: center;
 }
-.cid-qHJMV2MslE .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+.cid-qI7z3m0ck0 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
   padding-left: 0;
   padding-bottom: 0;
 }
-.cid-qHJMV2MslE .dropdown .dropdown-menu {
+.cid-qI7z3m0ck0 .dropdown .dropdown-menu {
   background: #ffffff;
   display: none;
   position: absolute;
@@ -2674,20 +2674,20 @@ body {
   padding-bottom: 1.4rem;
   text-align: left;
 }
-.cid-qHJMV2MslE .dropdown .dropdown-menu .dropdown-item {
+.cid-qI7z3m0ck0 .dropdown .dropdown-menu .dropdown-item {
   width: auto;
   padding: 0.235em 1.5385em 0.235em 1.5385em !important;
 }
-.cid-qHJMV2MslE .dropdown .dropdown-menu .dropdown-item::after {
+.cid-qI7z3m0ck0 .dropdown .dropdown-menu .dropdown-item::after {
   right: 0.5rem;
 }
-.cid-qHJMV2MslE .dropdown .dropdown-menu .dropdown-submenu {
+.cid-qI7z3m0ck0 .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
 }
-.cid-qHJMV2MslE .dropdown.open > .dropdown-menu {
+.cid-qI7z3m0ck0 .dropdown.open > .dropdown-menu {
   display: block;
 }
-.cid-qHJMV2MslE .navbar-toggleable-sm.opened:after {
+.cid-qI7z3m0ck0 .navbar-toggleable-sm.opened:after {
   position: absolute;
   width: 100vw;
   height: 100vh;
@@ -2699,28 +2699,28 @@ body {
   -webkit-transform: translateY(100%);
   z-index: 1000;
 }
-.cid-qHJMV2MslE .navbar.navbar-short {
+.cid-qI7z3m0ck0 .navbar.navbar-short {
   min-height: 60px;
   transition: all .2s;
 }
-.cid-qHJMV2MslE .navbar.navbar-short .navbar-toggler-right {
+.cid-qI7z3m0ck0 .navbar.navbar-short .navbar-toggler-right {
   top: 20px;
 }
-.cid-qHJMV2MslE .navbar.navbar-short .navbar-logo a {
+.cid-qI7z3m0ck0 .navbar.navbar-short .navbar-logo a {
   font-size: 2.5rem !important;
   line-height: 2.5rem;
   transition: font-size 0.25s;
 }
-.cid-qHJMV2MslE .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+.cid-qI7z3m0ck0 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
   font-size: 2.5rem !important;
 }
-.cid-qHJMV2MslE .navbar.navbar-short .navbar-logo a img {
+.cid-qI7z3m0ck0 .navbar.navbar-short .navbar-logo a img {
   height: 3rem !important;
 }
-.cid-qHJMV2MslE .navbar.navbar-short .navbar-brand {
+.cid-qI7z3m0ck0 .navbar.navbar-short .navbar-brand {
   min-height: 3rem;
 }
-.cid-qHJMV2MslE button.navbar-toggler {
+.cid-qI7z3m0ck0 button.navbar-toggler {
   width: 31px;
   height: 18px;
   cursor: pointer;
@@ -2728,10 +2728,10 @@ body {
   top: 1.5rem;
   right: 1rem;
 }
-.cid-qHJMV2MslE button.navbar-toggler:focus {
+.cid-qI7z3m0ck0 button.navbar-toggler:focus {
   outline: none;
 }
-.cid-qHJMV2MslE button.navbar-toggler .hamburger span {
+.cid-qI7z3m0ck0 button.navbar-toggler .hamburger span {
   position: absolute;
   right: 0;
   width: 30px;
@@ -2739,92 +2739,92 @@ body {
   border-right: 5px;
   background-color: #333333;
 }
-.cid-qHJMV2MslE button.navbar-toggler .hamburger span:nth-child(1) {
+.cid-qI7z3m0ck0 button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
   transition: all .2s;
 }
-.cid-qHJMV2MslE button.navbar-toggler .hamburger span:nth-child(2) {
+.cid-qI7z3m0ck0 button.navbar-toggler .hamburger span:nth-child(2) {
   top: 8px;
   transition: all .15s;
 }
-.cid-qHJMV2MslE button.navbar-toggler .hamburger span:nth-child(3) {
+.cid-qI7z3m0ck0 button.navbar-toggler .hamburger span:nth-child(3) {
   top: 8px;
   transition: all .15s;
 }
-.cid-qHJMV2MslE button.navbar-toggler .hamburger span:nth-child(4) {
+.cid-qI7z3m0ck0 button.navbar-toggler .hamburger span:nth-child(4) {
   top: 16px;
   transition: all .2s;
 }
-.cid-qHJMV2MslE nav.opened .hamburger span:nth-child(1) {
+.cid-qI7z3m0ck0 nav.opened .hamburger span:nth-child(1) {
   top: 8px;
   width: 0;
   opacity: 0;
   right: 50%;
   transition: all .2s;
 }
-.cid-qHJMV2MslE nav.opened .hamburger span:nth-child(2) {
+.cid-qI7z3m0ck0 nav.opened .hamburger span:nth-child(2) {
   -webkit-transform: rotate(45deg);
   transform: rotate(45deg);
   transition: all .25s;
 }
-.cid-qHJMV2MslE nav.opened .hamburger span:nth-child(3) {
+.cid-qI7z3m0ck0 nav.opened .hamburger span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
   transition: all .25s;
 }
-.cid-qHJMV2MslE nav.opened .hamburger span:nth-child(4) {
+.cid-qI7z3m0ck0 nav.opened .hamburger span:nth-child(4) {
   top: 8px;
   width: 0;
   opacity: 0;
   right: 50%;
   transition: all .2s;
 }
-.cid-qHJMV2MslE .collapsed.navbar-expand {
+.cid-qI7z3m0ck0 .collapsed.navbar-expand {
   flex-direction: column;
 }
-.cid-qHJMV2MslE .collapsed .btn {
+.cid-qI7z3m0ck0 .collapsed .btn {
   display: flex;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse {
   display: none !important;
   padding-right: 0 !important;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show {
   display: block !important;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show .navbar-nav {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show .navbar-nav {
   display: block;
   text-align: center;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
   margin-bottom: 1rem;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show .navbar-buttons {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
 }
-.cid-qHJMV2MslE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-qHJMV2MslE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qI7z3m0ck0 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
 }
-.cid-qHJMV2MslE .collapsed button.navbar-toggler {
+.cid-qI7z3m0ck0 .collapsed button.navbar-toggler {
   display: block;
 }
-.cid-qHJMV2MslE .collapsed .navbar-brand {
+.cid-qI7z3m0ck0 .collapsed .navbar-brand {
   margin-left: 1rem !important;
 }
-.cid-qHJMV2MslE .collapsed .navbar-toggleable-sm {
+.cid-qI7z3m0ck0 .collapsed .navbar-toggleable-sm {
   flex-direction: column;
   -webkit-flex-direction: column;
 }
-.cid-qHJMV2MslE .collapsed .dropdown .dropdown-menu {
+.cid-qI7z3m0ck0 .collapsed .dropdown .dropdown-menu {
   width: 100%;
   text-align: center;
   position: relative;
@@ -2836,19 +2836,19 @@ body {
   transition-duration: .5s;
   transition-property: opacity,padding,height;
 }
-.cid-qHJMV2MslE .collapsed .dropdown.open > .dropdown-menu {
+.cid-qI7z3m0ck0 .collapsed .dropdown.open > .dropdown-menu {
   position: relative;
   opacity: 1;
   height: auto;
   padding: 1.4rem 0;
   visibility: visible;
 }
-.cid-qHJMV2MslE .collapsed .dropdown .dropdown-submenu {
+.cid-qI7z3m0ck0 .collapsed .dropdown .dropdown-submenu {
   left: 0;
   text-align: center;
   width: 100%;
 }
-.cid-qHJMV2MslE .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+.cid-qI7z3m0ck0 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
   margin-top: 0;
   position: inherit;
   right: 0;
@@ -2864,55 +2864,55 @@ body {
   border-left: .30em solid transparent;
 }
 @media (max-width: 991px) {
-  .cid-qHJMV2MslE.navbar-expand {
+  .cid-qI7z3m0ck0.navbar-expand {
     flex-direction: column;
   }
-  .cid-qHJMV2MslE img {
+  .cid-qI7z3m0ck0 img {
     height: 3.8rem !important;
   }
-  .cid-qHJMV2MslE .btn {
+  .cid-qI7z3m0ck0 .btn {
     display: flex;
   }
-  .cid-qHJMV2MslE button.navbar-toggler {
+  .cid-qI7z3m0ck0 button.navbar-toggler {
     display: block;
   }
-  .cid-qHJMV2MslE .navbar-brand {
+  .cid-qI7z3m0ck0 .navbar-brand {
     margin-left: 1rem !important;
   }
-  .cid-qHJMV2MslE .navbar-toggleable-sm {
+  .cid-qI7z3m0ck0 .navbar-toggleable-sm {
     flex-direction: column;
     -webkit-flex-direction: column;
   }
-  .cid-qHJMV2MslE .navbar-collapse {
+  .cid-qI7z3m0ck0 .navbar-collapse {
     display: none !important;
     padding-right: 0 !important;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing,
-  .cid-qHJMV2MslE .navbar-collapse.show {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing,
+  .cid-qI7z3m0ck0 .navbar-collapse.show {
     display: block !important;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing .navbar-nav,
-  .cid-qHJMV2MslE .navbar-collapse.show .navbar-nav {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing .navbar-nav,
+  .cid-qI7z3m0ck0 .navbar-collapse.show .navbar-nav {
     display: block;
     text-align: center;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-qHJMV2MslE .navbar-collapse.show .navbar-nav .nav-item {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qI7z3m0ck0 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qHJMV2MslE .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qI7z3m0ck0 .navbar-collapse.show .navbar-nav .nav-item:last-child {
     margin-bottom: 1rem;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing .navbar-buttons,
-  .cid-qHJMV2MslE .navbar-collapse.show .navbar-buttons {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qI7z3m0ck0 .navbar-collapse.show .navbar-buttons {
     text-align: center;
   }
-  .cid-qHJMV2MslE .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-qHJMV2MslE .navbar-collapse.show .navbar-buttons:last-child {
+  .cid-qI7z3m0ck0 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qI7z3m0ck0 .navbar-collapse.show .navbar-buttons:last-child {
     margin-bottom: 1rem;
   }
-  .cid-qHJMV2MslE .dropdown .dropdown-menu {
+  .cid-qI7z3m0ck0 .dropdown .dropdown-menu {
     width: 100%;
     text-align: center;
     position: relative;
@@ -2924,19 +2924,19 @@ body {
     transition-duration: .5s;
     transition-property: opacity,padding,height;
   }
-  .cid-qHJMV2MslE .dropdown.open > .dropdown-menu {
+  .cid-qI7z3m0ck0 .dropdown.open > .dropdown-menu {
     position: relative;
     opacity: 1;
     height: auto;
     padding: 1.4rem 0;
     visibility: visible;
   }
-  .cid-qHJMV2MslE .dropdown .dropdown-submenu {
+  .cid-qI7z3m0ck0 .dropdown .dropdown-submenu {
     left: 0;
     text-align: center;
     width: 100%;
   }
-  .cid-qHJMV2MslE .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  .cid-qI7z3m0ck0 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
     margin-top: 0;
     position: inherit;
     right: 0;
@@ -2953,37 +2953,37 @@ body {
   }
 }
 @media (min-width: 767px) {
-  .cid-qHJMV2MslE .menu-logo {
+  .cid-qI7z3m0ck0 .menu-logo {
     flex-shrink: 0;
   }
 }
-.cid-qHJMV2MslE .navbar-collapse {
+.cid-qI7z3m0ck0 .navbar-collapse {
   flex-basis: auto;
 }
-.cid-qHJMV2MslE .nav-link:hover,
-.cid-qHJMV2MslE .dropdown-item:hover {
+.cid-qI7z3m0ck0 .nav-link:hover,
+.cid-qI7z3m0ck0 .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-qHJMV5QxiK {
+.cid-qI7z3o28nF {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-qHJMV5QxiK .mbr-slider .carousel-control {
+.cid-qI7z3o28nF .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-qHJMV5QxiK .mbr-slider .carousel-control-prev {
+.cid-qI7z3o28nF .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-qHJMV5QxiK .mbr-slider .carousel-control-next {
+.cid-qI7z3o28nF .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-qHJMV5QxiK .mbr-slider .modal-body .close {
+.cid-qI7z3o28nF .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-qHJMV5QxiK .mbr-gallery-item > div::before {
+.cid-qI7z3o28nF .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
   left: 0;
@@ -2996,13 +2996,13 @@ body {
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
 }
-.cid-qHJMV5QxiK .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+.cid-qI7z3o28nF .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-qHJMV5QxiK .mbr-gallery-item > div:hover:before {
+.cid-qI7z3o28nF .mbr-gallery-item > div:hover:before {
   opacity: 0.7 !important;
 }
-.cid-qHJMV5QxiK .mbr-gallery-title {
+.cid-qI7z3o28nF .mbr-gallery-title {
   font-size: .9em;
   position: absolute;
   display: block;
@@ -3012,7 +3012,7 @@ body {
   color: #fff;
   z-index: 2;
 }
-.cid-qHJMV5QxiK .mbr-gallery-title:before {
+.cid-qI7z3o28nF .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -3026,43 +3026,43 @@ body {
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
 }
-.cid-qHJMVcdhba {
+.cid-qI7z3vkWaf {
   padding-top: 75px;
   padding-bottom: 75px;
   background-color: #414042;
 }
 @media (max-width: 767px) {
-  .cid-qHJMVcdhba .content {
+  .cid-qI7z3vkWaf .content {
     text-align: center;
   }
-  .cid-qHJMVcdhba .content > div:not(:last-child) {
+  .cid-qI7z3vkWaf .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-qHJMVcdhba .media-wrap {
+  .cid-qI7z3vkWaf .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-qHJMVcdhba .media-wrap .mbr-iconfont-logo {
+.cid-qI7z3vkWaf .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-qHJMVcdhba .media-wrap img {
+.cid-qI7z3vkWaf .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-qHJMVcdhba .footer-lower .copyright {
+  .cid-qI7z3vkWaf .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-qHJMVcdhba .footer-lower hr {
+.cid-qI7z3vkWaf .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-qHJMVcdhba .footer-lower .social-list {
+.cid-qI7z3vkWaf .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3071,24 +3071,24 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-qHJMVcdhba .footer-lower .social-list .mbr-iconfont-social {
+.cid-qI7z3vkWaf .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-qHJMVcdhba .footer-lower .social-list .soc-item {
+.cid-qI7z3vkWaf .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-qHJMVcdhba .footer-lower .social-list a {
+.cid-qI7z3vkWaf .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-qHJMVcdhba .footer-lower .social-list a:hover {
+.cid-qI7z3vkWaf .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-qHJMVcdhba .footer-lower .social-list {
+  .cid-qI7z3vkWaf .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
